docker-main-master-f4fe57e21023db3e031fb3de8c881a2413eea8ba/environments/int/pods/networkpolicy.yaml
apiVersion: extensions/v1beta1
kind: NetworkPolicy
metadata:
  name: catalogue-access
  namespace: sock-shop
spec:
  podSelector:
    matchLabels:
      name: database
  ingress:
    - from:
        - podSelector:
            matchLabels:
              name: backend
      ports:
        - protocol: TCP 
          port: 5432
